provisioning/bootstrap/project/roles/k8s_masters/files/bookinfo-policy-projectcalico.org.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dev1
spec:
  selector: all()
  types:
  - Ingress
  - Egress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bookinfo-productpage-ingress-from-envoy
  namespace: dev1
spec:
  ingress:
  - action: Allow
    destination:
      ports:
      - 9080
    protocol: TCP
    source:
      namespaceSelector: app == 'ingress'
      selector: app == 'envoy'
  selector: app == 'productpage'
  types:
  - Ingress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bookinfo-reviews-ingress-from-productpage
  namespace: dev1
spec:
  ingress:
  - action: Allow
    destination:
      ports:
      - 9080
    protocol: TCP
    source:
      selector: app == 'productpage'
  selector: app == 'reviews'
  types:
  - Ingress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bookinfo-details-ingress-from-productpage
  namespace: dev1
spec:
  ingress:
  - action: Allow
    destination:
      ports:
      - 9080
    protocol: TCP
    source:
      selector: app == 'productpage'
  selector: app == 'details'
  types:
  - Ingress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bookinfo-ratings-ingress-from-reviews
  namespace: dev1
spec:
  ingress:
  - action: Allow
    destination:
      ports:
      - 9080
    protocol: TCP
    source:
      selector: app == 'reviews' && version == 'v2'
  - action: Allow
    destination:
      ports:
      - 9080
    protocol: TCP
    source:
      selector: app == 'reviews' && version == 'v3'
  selector: app == 'ratings'
  types:
  - Ingress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bookinfo-egress
  namespace: dev1
spec:
  egress:
  - action: Allow
    destination:
      namespaceSelector: owner == 'dev1'
    source: {}
  - action: Allow
    destination:
      namespaceSelector: app == 'ingress'
      selector: app == 'envoy'
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
    source: {}
  types:
  - Egress
